[package]
name = "flexint"
version = "0.1.0"
edition = "2021"
description = "Big integer types, optimized for small values"
repository = "https://github.com/wleslie/flexint"
license = "MIT"
categories = ["mathematics"]

[package.metadata.docs.rs]
all-features = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dependencies]
num-bigint = "0.4.4"
num-integer = "0.1.46"
num-traits = "0.2.18"
serde_with = { version = "3.7.0", optional = true }
trait-tactics = { version = "0.1.0", features = ["num-traits"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
serde = ["dep:serde_with"]
